--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,7 +12,7 @@
 		<meta name="description" content="" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-
+		<base href="/">
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
